Sat Nov  10 21:23:10 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a mouse out ecore event handler, which calls focus out on any
	  widgets in focus (if any).
	* Added two new states to the Ewl_State enum
	  	EWL_STATE_NORMAL,
		EWL_STATE_DISABLED
	  a widget by default allways has the state normal unless you call
	  ewl_widget_disable() on it, this will switch to the state "disabled"
	  in ebits, and prevent it from recieving any events except for
	  configure. Just call ewl_widget_enable() on the widget again to
	  make it normal. I also added matching callbacks for theese.

Fri Nov  09 00:22:08 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Removed the Ewl_Widget_Type enum, instead im gonna use the
	  Ewl_Widget->appearance to identify widgets.
	* Added a callback called EWL_CALLBACK_APPEARANCE_CHANGED
	  that gets called when you change the appearance string.
	* Made it the fx code init each widget, and read user set effects from
	  a fx.db and then add them.
	* Wrote a dispatcher system for the fx code which looks if there is
	  similiar effects pending and ques it or adds it right away if it
	  wont interfear with any other pending effects.

Sun Nov  04 22:33:44 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Rewrote ewl_fx.* the old ones were only temporary solutions.
	  Effects are now pluginable, this is very basic but still powerful.
	* /theme/author, /theme/licence, /theme/name keys now exist in the
	  default theme database.
	* Ewl_Table now support object alignments.
	* Ewl_Text didn't have entries in the default theme.db, neither
	  a own thmeme_update call.
	* Renamed __ewl_widget_hide to _ewl_widget_hide_fx_clip_box,
	  since all it did was to hide the fx_clip_box.
	* Fixed bug in ewl_config_get_int(). It returned whether or not the
	  value was fetched properly instead of returning the value.
	* Added effects called fade_in, fade_out, and glow.